--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -25,30 +25,6 @@
 
 </div>
 
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Services <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Promotions</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Reviews</a>
-      </li>
-    </ul>
-
-
-    <span class="navbar-brand">
-    <a class="nav-link" href="#">Book Appointment </a>
-    </span>
-  </div>
-</nav>
-
-
+<p class="mt-3">
+  <%= link_to 'Book Appointment', bookappt_path, class: 'btn btn-primary btn-lg active' %>
+</p>
