--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,6 +12,12 @@
       <li class="nav-item active">
         <a class="nav-link px-2" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
+      <a class="nav-link px-2" href="#">Services <span class="sr-only">(current)</span></a>
+      </li>
+      <a class="nav-link px-2" href="#">Promotions <span class="sr-only">(current)</span></a>
+      </li>
+      <a class="nav-link px-2" href="#">Reviews <span class="sr-only">(current)</span></a>
+      </li>
     </ul>
     <span class="navbar-item px-2" >
     <a class="nav-link" href="#">Sign up</a>
