--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -25,6 +25,29 @@
 
 </div>
 
-<p class="mt-3">
+<p class="mt-3" style="padding: 20px">
   <%= link_to 'Book Appointment', bookappt_path, class: 'btn btn-primary btn-lg active' %>
 </p>
+
+
+<div class="manicure" style="padding: 20px">
+  <div class="card w-75">
+    <h5 class="card-header">Manicure</h5>
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</div>
+
+<div class="pedicure" style="padding: 20px"> 
+  <div class="card w-75">
+    <h5 class="card-header">Pedicure</h5>
+    <div class="card-body">
+      <h5 class="card-title">Special title treatment</h5>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+</div>
