--- a/app/views/pages/login.html.erb
+++ b/app/views/pages/login.html.erb
@@ -1,3 +1,4 @@
+<div style="padding:20px;">
 <div class="log-form">
   <h2>LOGIN</h2>
   <h6>Sign in to your account</h6>
@@ -13,4 +14,7 @@
   </form>
 </div>
 
-<input type="button" value="Go Back" onclick="history.back(-1)" />
+<input type="button" value="Go Back" onclick="history.back(-1)" /> 
+
+temporary placement
+<%=link_to "Reschedule", reschedule_path(login_url), class: 'btn btn-outine-secondary btn-sm'%>
