--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,7 +20,7 @@
       </li>
     </ul>
     <span class="navbar-item px-2" >
-    <%= link_to 'Sign in', welcome_path, class: 'nav-link' %>
+    <%= link_to 'Sign in', login_path, class: 'nav-link' %>
     </span>
 
     <span class="navbar-item px-2">
