Fixed datbase, fixed navbar, seed data

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -34,8 +34,8 @@
   <div class="card w-75">
     <h5 class="card-header">Manicure</h5>
     <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <h5 class="card-title">Regular Manicure</h5>
+      <p class="card-text">This is the traditional service that includes a process something like this: remove old polish, buff and shape nails, short hand massage, apply base coat, wait for base coat to dry, add quick-dry top coat, pay and go.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
@@ -45,8 +45,8 @@
   <div class="card w-75">
     <h5 class="card-header">Pedicure</h5>
     <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <h5 class="card-title">Regular Manicure</h5>
+      <p class="card-text">A simple treatment that includes foot soaking, foot scrubbing with a pumice stone or foot file, nail clipping, nail shaping, foot and calf massage, moisturizer and nail polishing.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
