--- a/app/views/pages/bookappt.html.erb
+++ b/app/views/pages/bookappt.html.erb
@@ -1,4 +1,5 @@
 
+# <%= bootstrap_form_with model: , local: true do |form| %>
 <div style="padding:15px;">
 <div class="container">
             <div class="row">
@@ -46,8 +47,8 @@
                                     <div class="form-group">
                                         <label class="control-label" for="appointmentfor">Appointment For</label>
                                         <select id="appointmentfor" name="appointmentfor" class="form-control">
-                                            <option value="Service#1">Service#1</option>
-                                            <option value="Service#2">Service#2</option>
+                                            <option value="Service#1">Manicure</option>
+                                            <option value="Service#2">Pedicure</option>
                                         </select>
                                     </div>
                                 </div>
@@ -57,23 +58,23 @@
                                     <div class="form-group">
                                         <label class="control-label" for="appointmentfor">Select Technician</label>
                                         <select id="appointmentfor" name="appointmentfor" class="form-control">
-                                            <option value="Service#1">Technician#1</option>
-                                            <option value="Service#2">Technician#2</option>
+                                            <option value="Service#1">Naila Stiles</option>
+                                            <option value="Service#2"></option>
                                         </select>
                                     </div>
                                 </div>
 
                                 <!-- Button -->
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <button id="singlebutton" name="singlebutton" class="btn btn-default">Make An Appointment</button>
-                                    </div>
-                                </div>
+                                <p class="mt-3" style="padding: 20px">
+                                <%= link_to 'Book Now', welcome_path, class: 'btn btn-primary btn-lg active' %>
+                              </p>                                
                             </div>
                         </form>
 </div>
+<% end %>
 
-<p> do not click apply code pls - routi </p>
+
+<p>  </p>
 <%= form_with url: "/search", method: :get do |form| %>
     <%= form.text_field :query %>
     <%= form.submit "Apply code" %>
