--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,32 +1,71 @@
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light px-5" style="background-color: #e3f2fd;">
-<%= image_tag 'nail_logo@2x.png' %>
-  <%= link_to 'HUY NAILS', welcome_path,  class: 'navbar-brand' %>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light px-5">
+<a class="navbar-brand" href="#">HUYNAILS</a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item <%= active_class(welcome_path) %>">
+    <%= link_to 'Home', welcome_path, class: 'nav-link px-2' %>
+    </li>
+    <%= link_to 'Services', welcome_path,  class: 'nav-link px-2' %>
+    </li>
+    <%= link_to 'Promotions', promotions_path, class: 'nav-link px-2' %>
+    </li>
+    <%= link_to 'Reviews', welcome_path, class: 'nav-link px-2' %>
+    </li>
+    </li>
+  </ul>
+
+  <ul class="navbar-nav">
+    <% if user_signed_in? %>
+      <li class="nav-item <%= active_class(edit_user_registration_path) %>">
+        <%= link_to "Hi, {current_user.email}", edit_user_registration_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+      </li>
+    <% else %>
+      <li class="nav-item <%= active_class(new_user_session_path) %>">
+        <%= link_to 'Sign In', new_user_session_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item <%= active_class(new_user_registration_path) %>">
+        <%= link_to 'Sign Up', new_user_registration_path, class: 'nav-link' %>
+      </li>
+    <% end %>
+  </ul> 
+</div>
+</nav>  
 
 
-  <div class="collapse navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-      <%= link_to 'Home', welcome_path, class: 'nav-link px-2' %>
-      </li>
-      <%= link_to 'Services', welcome_path,  class: 'nav-link px-2' %>
-      </li>
-      <%= link_to 'Promotions', promotions_path, class: 'nav-link px-2' %>
-      </li>
-      <%= link_to 'Reviews', welcome_path, class: 'nav-link px-2' %>
-      </li>
-    </ul>
-    <span class="navbar-item px-2" >
-    <%= link_to 'Sign in', login_path, class: 'nav-link' %>
-    </span>
 
-    <span class="navbar-item px-2">
-    <%= link_to 'Sign up',welcome_path, class: 'nav-link' %>
-    </span>
-  </div>
 
-  
-</nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
