--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,7 +1,7 @@
 
 <div style="padding:20px;">
 <h2>Welcome to Nail Salon</h2>
-<p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+<p>We take great pride in servicing the community to give a great service and be your one stop shop for pampering!</p>
 </div>
 
 <div style="padding:15px;">
@@ -45,7 +45,7 @@
   <div class="card w-75">
     <h5 class="card-header">Pedicure</h5>
     <div class="card-body">
-      <h5 class="card-title">Regular Manicure</h5>
+      <h5 class="card-title">Regular Pedicure</h5>
       <p class="card-text">A simple treatment that includes foot soaking, foot scrubbing with a pumice stone or foot file, nail clipping, nail shaping, foot and calf massage, moisturizer and nail polishing.</p>
       <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
