--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,8 @@
 @import "bootswatch/dist/yeti/variables";
 @import "bootstrap/scss/bootstrap";
 @import "bootswatch/dist/yeti/bootswatch";
+
+
+.alert-dismissible {
+    padding-left: $close-font-size + $alert-padding-x * 2;
+  }
