--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -26,9 +26,30 @@
 </div>
 
 <p class="mt-3" style="padding: 20px">
-  <%= link_to 'Book Appointment', bookappt_path, class: 'btn btn-primary btn-lg active' %>
+  <%= link_to 'Book Appointment', appointments_path, class: 'btn btn-primary btn-lg active' %>
 </p>
 
+
+<% if @current_appointment %>
+
+<div class="manicure" style="padding: 20px">
+  <div class="card w-75">
+    <h5 class="card-header">Current Appointment</h5>
+    <div class="card-body">
+      
+      <p class="card-text">
+        <%= @current_appointment.client_firstname%>
+        <%= @current_appointment.client_lastname %><br>
+        <%= @current_appointment.technician_name %><br>
+        <%= @current_appointment.date_created.strftime("%A %d %B %Y, %I:%M %P CT") %>
+      </p>
+      <%= link_to 'Cancel', appointments_path,class: 'btn btn-primary' %>
+      <%= link_to 'Reschedule ', appointments_path,class: 'btn btn-primary' %>
+      <%= link_to 'Check-In', appointments_path,class: 'btn btn-primary' %>
+    </div>
+  </div>
+</div>
+<% end %>
 
 <div class="manicure" style="padding: 20px">
   <div class="card w-75">
@@ -51,3 +72,4 @@
     </div>
   </div>
 </div>
+
