--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,7 +21,7 @@
   <ul class="navbar-nav">
     <% if user_signed_in? %>
       <li class="nav-item <%= active_class(edit_user_registration_path) %>">
-        <%= link_to "Hi, {current_user.email}", edit_user_registration_path, class: 'nav-link' %>
+        <%= link_to "Hi, #{current_user.email}", edit_user_registration_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
         <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'nav-link' %>
