--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -16,6 +16,7 @@
     <%= f.telephone_field :client_mobile %>
     <%= f.datetime_field :date_created %>
     <%= f.select :technician_name, ["Naila Stiles"] %>
+    <%= f.select :service_name, ["Manicure", "Pedicure"] %>
 
     <%= f.submit %>
 
