--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -44,7 +44,7 @@
         <%= @current_appointment.date_created.strftime("%A %d %B %Y, %I:%M %P CT") %>
       </p>
       <%= link_to 'Cancel', appointments_path,class: 'btn btn-primary' %>
-      <%= link_to 'Reschedule ', appointments_path,class: 'btn btn-primary' %>
+      <%= link_to 'Reschedule ', edit_appointment_path(@current_appointment),class: 'btn btn-primary' %>
       <%= link_to 'Check-In', appointments_path,class: 'btn btn-primary' %>
     </div>
   </div>
