--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -6,11 +6,11 @@
 
         <%= f.text_field :client_firstname %>
         <%= f.text_field :client_lastname  %>   
-    
+        <%= f.telephone_field :client_mobile %>
         <%= f.datetime_field :date_created %>
         <%= f.select :technician_name, ["Naila Stiles"] %>
-       <%= f.telephone_field :client_mobile %>
-
+        <%= f.select :service_name, ["Manicure", "Pedicure"] %>
+        
         <div class="form-group">
             <label class="control-label" for="promotions">Select Promotion</label>
             <select id="promotions" name="promotions" class="form-control">
