--- a/app/views/appointments/edit.html.erb
+++ b/app/views/appointments/edit.html.erb
@@ -8,7 +8,7 @@
         <%= f.text_field :client_lastname  %>   
         <%= f.telephone_field :client_mobile %>
         <%= f.datetime_field :date_created %>
-        <%= f.select :technician_name, ["Naila Stiles"] %>
+        <%= f.select :technician_name, ["Naila Stiles", "Jules Jones", "Kailen Rhodes"] %>
         <%= f.select :service_name, ["Manicure", "Pedicure"] %>
         
         <div class="form-group">
