--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -52,7 +52,7 @@
       </p>
       <%= link_to 'Cancel', appointment_path(@current_appointment),method: :delete,data: {confirm: "Are you sure you want to cancel the appointment?"}, class: 'btn btn-primary' %>
       <%= link_to 'Reschedule ', edit_appointment_path(@current_appointment),class: 'btn btn-primary' %>
-      <%= link_to 'Check-In', appointments_path,class: 'btn btn-primary' %>
+      <%= link_to 'Check-In', appointment_checkin_path(@current_appointment),method: :post,class: 'btn btn-primary' %>
         </div>
       </div>
     </div>
