--- a/app/views/pages/customers.html.erb
+++ b/app/views/pages/customers.html.erb
@@ -1,16 +1,32 @@
 <h1>Customer List</h1>
 
-<table class="table table-hover">
+
+<table class="table table-striped table-hover">
 
   <thead class="thead-dark">
     <tr>
-      <th>Name</th>
-      <th>Phone Number</th>
-      <th>Email Address</th>
-      <th>Total Appointments</th>
+    <th>Name</th>
+    <th>Phone Number</th>
+    <th>Email Address</th>
+    <th>Total Appointments</th>
+    <th> Total Reviews </th>
       <th></th>
     </tr>
   </thead>
+
+  <tbody>
+    <% @customers.each do |customer| %>
+      <tr>
+        <td><%= customer.first_name %></td>
+        <td><%= customer.phone_number %></td>
+        <td> <%= customer.email %> </td>
+        <td class="text-nowrap">
+          <%= link_to 'show', customer_path(customer), class: 'btn btn-outline-secondary btn-sm' %>
+          <% end %>
+          </td>
+      </tr>
+    <% end %>
+  </tbody>
 
 </table>
 
