--- a/app/views/promotions/promotions.html.erb
+++ b/app/views/promotions/promotions.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Promotion</th>
       <th>Promo Code</th>
+      <th>Type</th>
       <th></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
       <tr>
       <td><%= promotion.title %></td>
         <td><%= promotion.promo_code %></td>
+        <td><%= promotion.service_type %></td>
         <td class="text-nowrap">
           <%= link_to 'show', promotions_path, class: "btn btn-danger" %>
           <%= link_to 'destroy', promotions_path, method: :delete, class: "btn btn-danger" %>
