--- a/app/views/pages/customers.html.erb
+++ b/app/views/pages/customers.html.erb
@@ -5,27 +5,33 @@
 
   <thead class="thead-dark">
     <tr>
-    <th>Name</th>
+    <th>First Name</th>
+    <th> Last Name</th>
     <th>Phone Number</th>
     <th>Email Address</th>
-    <th>Total Appointments</th>
-    <th> Total Reviews </th>
+    <th> Total Appointments </th>
+      <th></th>
       <th></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @customers.each do |customer| %>
+    <% @customers.each do |user| %>
+      <% if user.manager_role? %>
+        <% else %>
       <tr>
-        <td><%= customer.first_name %></td>
-        <td><%= customer.phone_number %></td>
-        <td> <%= customer.email %> </td>
+        <td><%= user.first_name %></td>
+        <td><%= user.last_name %></td>
+        <td><%= user.phone_number %></td>
+        <td> <%= user.email %> </td>
+        <td> <%= user.appointments.count %> </td>
         <td class="text-nowrap">
-          <%= link_to 'show', customer_path(customer), class: 'btn btn-outline-secondary btn-sm' %>
-          <% end %>
+          <%= link_to 'show', show_path, class: 'btn btn-danger' %>
+          
           </td>
       </tr>
-    <% end %>
+      <% end %>
+  <% end %>
   </tbody>
 
 </table>
