--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
     </li>
     <%= link_to 'Promotions', promotions_path, class: 'nav-link px-2' %>
     </li>
-    <%= link_to 'Reviews', review_path, class: 'nav-link px-2' %>
+    <%= link_to 'Reviews', newreview_path, class: 'nav-link px-2' %>
     </li>
     </li>
 
