--- a/app/views/pages/customers.html.erb
+++ b/app/views/pages/customers.html.erb
@@ -26,7 +26,7 @@
         <td> <%= user.email %> </td>
         <td> <%= user.appointments.count %> </td>
         <td class="text-nowrap">
-          <%= link_to 'show', show_path, class: 'btn btn-danger' %> 
+          <%= link_to 'show', show_path(user), class: 'btn btn-danger' %> 
           
           </td>
       </tr>
